# metalsvd

./: .gitignore  README.md  benchmark_suite.py  pyproject.toml  setup.py  test_sklearn.py  test_svd.py
.agent/: architecture.md  benchmarks.md  release_roadmap.md  task.md
metalsvd/: __init__.py  func.py  lanczos.py  randomized.py  sklearn.py
mpssvd/: __init__.py  func.py  lanczos.py  randomized.py
src/: svd.metal  svd_mps.mm
